html head made to template

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,11 +3,11 @@
 <body>
 
 <div th:fragment="copy">
-    <div class="panel panel-default">
+    <footer class="panel panel-default">
         <div class="panel-body">
             &copy; 2016 Codecool Budapest
         </div>
-    </div>
+    </footer>
 </div>
 
 </body>
