--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -27,6 +27,11 @@
             crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="/css/custom.css" />
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="/js/main.js"></script>
+
 </head>
 
 </div>
