--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -3,6 +3,8 @@
 
 <div th:replace="head :: copy"></div>
 <body>
+<div th:replace="menu :: copy"></div>
+
 
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
