counter to menu

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,6 +8,9 @@
 
         </div>
         <div class="cart-field col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <div>
+                <div th:text="${numberOfCarts}"></div>
+            </div>
         </div>
     </div>
 </div>
