Login logic started.

--- a/src/main/resources/templates/product/login.html
+++ b/src/main/resources/templates/product/login.html
@@ -7,7 +7,7 @@
 <h1>Login page</h1>
 <p th:text="${session.name}" th:unless="${session == null}">Not in session</p>
 <p th:if="${loginError}" class="error">Wrong user or password</p>
-<form th:action="@{/login.html}" method="post">
+<form th:action="@{/templates/product/login.html}" method="post">
     <label for="username">Username</label>:
     <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
     <label for="password">Password</label>:
