add counter with ajax

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -12,7 +12,7 @@
 </div>
 
 <div>
-    <li th:text="${numberOfCarts}"></li>
+    <li id="cart-counter" th:text="${numberOfCarts}"></li>
 </div>
 
 <div class="container">
