--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -9,7 +9,9 @@
         </div>
         <div class="cart-field col-lg-3 col-md-3 col-sm-3 col-xs-3">
             <div>
-                <div th:text="${numberOfCarts}"></div>
+                <div id="cart-counter"
+                        th:text="${numberOfProdutsInCart}"></div>
+                <button class="cartbutton"><a href="/cartview">Cart</a></button>
             </div>
         </div>
     </div>
