--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<div th:replace="head :: copy"></div>
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login page</title>
 </head>
 <body>
+<div th:replace="head :: copy"></div>
 <h1>Login page</h1>
 <p th:text="${session.name}" th:unless="${session == null}">Not in session</p>
 <p th:if="${loginError}" class="error">Wrong user or password</p>
-<form th:action="@{/templates/login.html}" method="post">
+<form th:action="@{/login.html}" method="post">
     <label for="username">Username</label>:
     <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
     <label for="password">Password</label>:
