--- a/src/main/resources/templates/cartview.html
+++ b/src/main/resources/templates/cartview.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<div th:replace="head :: copy"></div>
 
+<div th:replace="head :: copy"></div>
 <body>
+<div th:replace="menu :: copy"></div>
 
 
 <div class="jumbotron text-center">
     <h1>Codecool Shop - Cart</h1>
+
+
 </div>
 
 <div class="container">
-<div id="products" class="row list-group">
+    <div id="products" class="row list-group">
 
-    <div class="item col-xs-4 col-lg-4" th:each="lineItem,iterStat : ${lineitems}">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff"
-                 th:attr="src='/img/product_' + ${lineItem.getProduct().id} + '.jpg'" alt=""/>
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading" th:text="${lineItem.getProduct().name}">Product name</h4>
-                <p class="group inner list-group-item-text" th:text="${lineItem.getProduct().description}">Product
-                    description... </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead" th:text="${lineItem.quantity}">100 USD</p>
+        <div class="total">Your total is:</div>
+        <div class="total" th:text="${sum} + ' USD'">100 USD</div>
+
+        <div class="item col-xs-4 col-lg-4" th:each="lineItem,iterStat : ${lineitems}">
+            <div class="thumbnail">
+                <img class="group list-group-image" src="http://placehold.it/400x250/000/fff"
+                     th:attr="src='/img/product_' + ${lineItem.getProduct().id} + '.jpg'" alt=""/>
+                <div class="caption">
+                    <h4 class="group inner list-group-item-heading" th:text="${lineItem.getProduct().name}">Product
+                        name</h4>
+                    <p class="group inner list-group-item-text" th:text="${lineItem.getProduct().description}">Product
+                        description... </p>
+
+                    <div class="original-price">
+                        <p class="lead" th:text="'Unit price: ' + ${lineItem.getProduct().price}">100 USD</p>
                     </div>
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead" th:text="${lineItem.getPrice()}">100 USD</p>
+                    <div class="row">
+                        <div class="col-xs-12 col-md-6">
+                            <p class="lead" th:text="'Quantity: ' + ${lineItem.quantity}">100 USD</p>
+                        </div>
+                        <div class="col-xs-12 col-md-6">
+                            <p class="lead" th:text="'Total is: ' + ${lineItem.getPrice() + ' USD'}">100 USD</p>
+                        </div>
                     </div>
+
                 </div>
+
 
             </div>
 
-
         </div>
 
-    </div>
 
-    <div class="col-xs-12 col-md-6">
-        <p class="lead" th:text="${sum}">100 USD</p>
     </div>
 </div>
-</div>
-
 
 
 </body>
