--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -10,7 +10,7 @@
 <div>
     <li id="cart-counter" th:text="${numberOfCarts}"></li>
 </div>
-
+<a href="/login">Login</a>
 <div class="container">
     <div class="row">
         <div class="col-lg-2">
