--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
+<div th:replace="head :: copy"></div>
 <body>
 <div th:replace="menu :: copy"></div>
+
+
+
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
 </div>
 
-<div>
-    <li id="cart-counter" th:text="${numberOfCarts}"></li>
-</div>
-<a href="/login">Login</a>
 <div class="container">
     <div class="row">
         <div class="col-lg-2">
