--- a/src/main/resources/public/css/custom.css
+++ b/src/main/resources/public/css/custom.css
@@ -91,7 +91,25 @@ a .glyphicon{
     background-size: cover;
 }
 
+.login-img{
+    width: 70px;
+    height: auto;
+    background-image: url("../img/login.jpg");
+    background-size: cover;
+}
+
 .total{
     text-align: center;
     font-size: 36px;
+}
+
+
+#login {
+    position: absolute;
+    /*width: 300px;
+    height: 200px;
+    z-index: 15;*/
+    top: 45%;
+    left: 30%;
+    /*margin: -100px 0 0 -150px;*/
 }
